# run-claude

./: .gitignore  CLAUDE.md  Makefile  README.md  SECRETS.md  SECRETS_ADVANCED.md  SECRETS_QUICKSTART.md  profiles.yaml  pyproject.toml  with-agent-shim
.claude/agents/: .gitignore
.claude/commands/: .gitignore
dep/: docker-compose.override.yaml  docker-compose.yaml  litellm.Dockerfile
dep/config/timescaledb/: init-databases.sql
docs/: PRD-AUTO-INFRA.md  PROJ-ARCH.md  PROJ-ARCH.summary.md  PROJ-LAYOUT.md  PROJ-LAYOUT.summary.md
docs/PRDs/: PRD-00-META.md  PRD-01-ENV-SETUP.md  PRD-02-CONTAINERIZE.md  PRD-03-HOOKS.md  PRD-04A-RUNTIME-CONFIG.md  PRD-04B1-CONTEXT-OPS.md  PRD-04B2-MEMORY.md  PRD-04B3-KB.md  PRD-04B4-TSGS.md  PRD-04B5-SUBAGENTS.md  PRD-04B6-QNA.md  PRD-04C-SEARCH.md  PRD-04D1-BEHAVIOR.md  PRD-04D2-EVALS.md  PRD-04D3-TUNING.md  PRD-05-TUI.md  PRD-06-DOCS.md  PRD-07-RC-WEBSITE.md  PRD-08-NPL-WEBSITE.md
docs/arch/: data-flows.md  design-patterns.md  infrastructure.md
docs/layout/: docs.md  run-claude-package.md
hooks/: bash_hook.sh  install.sh  zsh_hook.zsh
playground/: README.md  test-switching.sh
playground/multi-project/: .gitignore
run_claude/: __init__.py  agent_runner.py  cli.py  config.py  litellm_proxy.py  models.yaml  opencode_cli.py  profiles.py  proxy.py  state.py
run_claude/callbacks/: __init__.py  provider_compat.py
run_claude/defaults/: hooks.yaml  models.yaml  profiles.yaml
run_claude/hooks/: __init__.py  builtin.py  chain.py  loader.py
scripts/: run-litellm-local  run-litellm-proxy
templates/: envrc.tmpl  envrc.user.tmpl
tests/: test_callbacks.py  test_cli.py  test_hooks.py
