[project]
name = "run-claude"
version = "0.1.2"
description = "Agent shim controller for Claude - directory-aware model routing via LiteLLM proxy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "prisma == 0.11.0",
    "psycopg2-binary>=2.9.0",
    "litellm >= 1.0.0",
    "litellm[proxy]>=1.0.0",
    "litellm-proxy-extras>=0.1.0",
    "prometheus_client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.scripts]
run-claude = "run_claude.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["run_claude"]

[tool.hatch.build.targets.wheel.force-include]
"profiles.yaml" = "run_claude/profiles.yaml"
"templates" = "run_claude/templates"
"dep" = "run_claude/dep"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "coverage[toml]>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["."]

[tool.coverage.run]
source = ["run_claude"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
